# gtcrn_c

./: CMakeLists.txt  GTCRNImpl.cpp  GTCRNImpl.h  infer_onnx.py  main.cpp  main_onnx.cc  mic-sample.py  pocketfft_hdronly.h  requirements.txt
